--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: any
   intl: ^0.20.2
   shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/png-transparent-shopping-cart.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
