--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ">3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
+  sqflite_common_ffi: any
+  material: ^1.0.0+2
+  path: any
 
 dev_dependencies:
   flutter_test:
